# mealy-moore-converter

./: .gitignore  ArgumentsParser.h  AutomataController.h  CMakeLists.txt  README.md  main.cpp
Automata/: IAutomata.h  MealyAutomata.h  MooreAutomata.h
Converter/: MealyToMooreConverter.h  MooreToMealyConverter.h
